[gd_scene load_steps=4 format=3 uid="uid://dkweoh02182gr"]

[ext_resource type="Script" path="res://Scenes/Tools/stuff_spreader.gd" id="1_8pbwl"]
[ext_resource type="PackedScene" uid="uid://ck308xwjm7j5e" path="res://Scenes/Props/grass_clump.tscn" id="2_0rd2s"]

[sub_resource type="SphereShape3D" id="SphereShape3D_2bond"]
resource_local_to_scene = true
radius = 3.0

[node name="StuffSpreader" type="Node3D" groups=["stuff_spreaders"]]
script = ExtResource("1_8pbwl")
spawnables = Array[PackedScene]([ExtResource("2_0rd2s")])
metadata/_edit_group_ = true

[node name="SpawnArea" type="Area3D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 0
input_ray_pickable = false
monitorable = false

[node name="SpawnShape" type="CollisionShape3D" parent="SpawnArea"]
unique_name_in_owner = true
shape = SubResource("SphereShape3D_2bond")

[node name="SpawnParent" type="Node3D" parent="."]
unique_name_in_owner = true
